[tool.poetry]
name = "examples"
version = "0.1.0"
description = "Ionic integration examples"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
black = {extras = ["jupyter"], version = "^24.1.1"}
ruff = "^0.2.1"
jinja2 = "^3.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
